# music-player

./: README.md  package.json
.github/workflows/: publish-to-auto-release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: es.rs  main.rs
src/assets/: covers.ts
src/base_components/: Checkbox.css  Checkbox.tsx
src/components/: Home.css  Home.tsx  Player.css  Player.tsx  PlaylistItem.css  PlaylistItem.tsx
