[package]
name = "music-player"
version = "0.0.1"
description = "MusicPlayer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "dialog-open", "protocol-all", "shell-open" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audiotags = "0.5.0"
mp3-duration = "0.1.10"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
