[package]
name = "music-player"
version = "0.0.3"
description = "MusicPlayer"
authors = ["HighFlowey"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "dialog-open", "protocol-all", "shell-open" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audiotags = "0.5.0"
mp3-duration = "0.1.10"
discord-rich-presence = "0.2.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
